stops twitter link in footer centre aligning on mobile

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -59,7 +59,10 @@
 
     a {
       display: flex;
-      justify-content: center;
+
+      @media (min-width: $m) {
+        justify-content: center;
+      }
     }
 
     .icon-twitter {
